changed overflow css of .modal css, to fix a problem in safari.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,7 +27,7 @@
 }
 
 .modal-dialog {
-	z-index: 1050;
+	z-index: 1051;
 }
 
 .objectList {
@@ -52,6 +52,7 @@
     height: 100%; /* Full height */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    overflow: visible;
 }
 
 /* Modal Content/Box */
